--- a/2021_22/MS/notes/notes.tex
+++ b/2021_22/MS/notes/notes.tex
@@ -185,11 +185,11 @@
 	for all $n$, and $x_n\to x$ for some $x\in\R$, then $x\in F$.
 \end{definition}
 
-\begin{proposition}[Notes 2.2]
+\begin{proposition}[2.2]
 	The union of finitely many closed sets is a closed set.
 \end{proposition}
 
-\begin{proposition}[Notes 2.4]
+\begin{proposition}[2.4]
 	The intersection of any family of closed sets is a closed set.
 \end{proposition}
 
@@ -197,7 +197,7 @@
 	A subset $G\subseteq\R$ is said to be \emph{open} if it its complement $G^c$ is closed.
 \end{definition}
 
-\begin{proposition}[Notes 2.6]
+\begin{proposition}[2.6]
 	Let $G\subseteq\R$. The following are equivalent:
 	\begin{enumerate}
 		\item $G$ is open.
@@ -206,31 +206,31 @@
 	\end{enumerate}
 \end{proposition}
 
-\begin{proposition}[Notes 2.8]
+\begin{proposition}[2.8]
 	The union of any family of open sets is an open set.
 \end{proposition}
 
-\begin{proposition}[Notes 2.9]
+\begin{proposition}[2.9]
 	The intersection of finitely many open sets is an open set.
 \end{proposition}
 
-\begin{theorem}[Notes 2.10]
+\begin{theorem}[2.10]
 	A subset of the real line is open iff it is the union of open intervals.
 \end{theorem}
 
-\begin{theorem}[Notes 2.11]
+\begin{theorem}[2.11]
 	Every open subset of the real line can be written as an at most countable union
 	of pairwise disjoint open intervals.
 \end{theorem}
 
 \subsection{Another look at continuity and uniform continuity}
 
-\begin{proposition}[Notes 2.23]
+\begin{proposition}[2.23]
 	If $K\subseteq\R$ is compact and $f:K\to\R$ is continuous, then $f$ is
 	uniformly continuous.
 \end{proposition}
 
-\begin{proposition}[Notes 2.24]
+\begin{proposition}[2.24]
 	A function $f:\R\to\R$ is continuous iff the inverse image of every
 	open set is an open set.
 \end{proposition}
@@ -252,16 +252,16 @@
 	of $K$ hasa subsequence that converges to an element of $K$.
 \end{definition}
 
-\begin{theorem}[Notes 2.15]
+\begin{theorem}[2.15]
 	On the real line, a set is compact if it is closed and bounded.
 \end{theorem}
 
-\begin{theorem}[Notes 2.17]
+\begin{theorem}[2.17]
 	Let $K$ be a compact set on the real line. If $f:K\to\R$ is continuous
 	then it is bounded.
 \end{theorem}
 
-\begin{theorem}[Extreme Value Theorem; Notes 2.18]
+\begin{theorem}[Extreme Value Theorem]
 	Let $K$ be a compact set on the real line. If $f:K\to\R$ is continuous
 	then $f$ has a maximum and a minimum.
 \end{theorem}
@@ -276,11 +276,11 @@
 	where $I'\subseteq I$, that still covers $E$.
 \end{definition}
 
-\begin{theorem}[Heine-Borel; Notes 2.20]
+\begin{theorem}[Heine-Borel]
 	Let $a,b\in\R$ with $a<b$. Every open cover of $[a,b]$ has a finite subcover.
 \end{theorem}
 
-\begin{theorem}[Notes 2.21]
+\begin{theorem}[2.21]
 	Let $K\subseteq\R$. The following are equivalent:
 	\begin{enumerate}
 		\item $K$ is compact.
@@ -304,7 +304,7 @@
 	is called the \emph{closed ball} with center $c$ and radius $r$.
 \end{definition}
 
-\begin{proposition}[Notes 3.7]
+\begin{proposition}[3.7]
 	Let $(X,d)$ be a metric space, $c\in X$ and $r>0$. For every point $x$ in the open
 	ball $B(c,r)$ there exists a positive number $r'$ such that $B(x,r')\subseteq B(c,r)$.
 \end{proposition}
@@ -326,17 +326,17 @@ Let $(X,d)$ be a metric space.
 	$r>0$ such that $B(x,r)\subseteq G$.
 \end{definition}
 
-\begin{theorem}[Notes 4.6]
+\begin{theorem}[4.6]
 	Let $(G_i)_{i\in I}$ be any family of open subsets of $X$. Then the union
 	$\bigcup_{i\in I} G_i$ is open.
 \end{theorem}
 
-\begin{theorem}[Notes 4.7]
+\begin{theorem}[4.7]
 	Let $G_1,...,G_n\subset X$ be open. Then the intersection $G_1\cap\cdots\cap G_n$
 	is open.
 \end{theorem}
 
-\begin{proposition}[Notes 4.9]
+\begin{proposition}[4.9]
 	A set in a metric space is open iff it can be written as a union of open balls.
 \end{proposition}
 
@@ -345,7 +345,7 @@ Let $(X,d)$ be a metric space.
 	\emph{relatively open} if it is open in the metric space $(Y,d_Y)$.
 \end{definition}
 
-\begin{proposition}[Notes 4.10]
+\begin{proposition}[4.10]
 	Let $(Y,d_Y)$ be a subspace of $(X,d)$ and let $G\subseteq Y$. The following
 	are equivalent
 	\begin{itemize}
@@ -354,7 +354,7 @@ Let $(X,d)$ be a metric space.
 	\end{itemize}
 \end{proposition}
 
-\begin{proposition}[Notes, Exercise 4.11]
+\begin{proposition}[Exercise 4.11]
 	Let $(Y,d_Y)$ be a subspace of $(X,d)$ such that $Y$ is open and non-empty. Then a
 	subset $G\subseteq Y$ is open in the metric space $(Y,d_Y)$ iff it is open in the
 	metric space $(X,d)$.
@@ -370,12 +370,12 @@ Let $(X,d)$ be a metric space.
 	Let $F\subseteq X$. Then $F$ is \emph{closed} if $F^c$ is open.
 \end{definition}
 
-\begin{theorem}[Notes 4.20]
+\begin{theorem}[4.20]
 	Let $(F_i)_{i\in I}$ be a family of closed subsets of $X$. Then $\bigcap_{i\in I}F_i$
 	is closed.
 \end{theorem}
 
-\begin{theorem}[Notes 4.21]
+\begin{theorem}[4.21]
 	Let $F_1,...,F_n\subseteq X$ be closed. Then $F_1\cup\cdots\cup F_n$ is closed.
 \end{theorem}
 
@@ -392,8 +392,8 @@ Let $(X,d)$ be a metric space.
 		\item there exists $C\subset X$ that is closed in the metric space $(X,d)$ such that
 		      $F=C\cap Y$.
 		\item $F=\overline F$. (\emph{Proposition 4.20})
-		\item $\p F\subseteq F$. (\emph{Notes, Problem 4.43})
-		\item For all accumulation points $x$ of $F$ in $Y$, $x\in F$. (\emph{Notes, Problem 4.47})
+		\item $\p F\subseteq F$. (\emph{Problem 4.43})
+		\item For all accumulation points $x$ of $F$ in $Y$, $x\in F$. (\emph{Problem 4.47})
 		\item For all sequences $(x_n)_{n\in\N}$ of elements in $F$, $x_n\to x$ implies $x\in F$. (\emph{Proposition 5.9})
 	\end{itemize}
 \end{proposition}
@@ -415,7 +415,7 @@ Let $(X,d)$ be a metric space.
 	there exists an open ball $B(x,r)\subseteq A$.
 \end{definition}
 
-\begin{proposition}[Notes 4.24]
+\begin{proposition}[4.24]
 	Let $(X,d)$ be a metric space and $A,B$ be subsets of $X$. Then
 	\begin{enumerate}
 		\item $\interior\emptyset=\emptyset$ and $\interior X=X$,
@@ -425,7 +425,7 @@ Let $(X,d)$ be a metric space.
 	\end{enumerate}
 \end{proposition}
 
-\begin{proposition}[Notes 4.25]
+\begin{proposition}[4.25]
 	Let $(X,d)$ be a metric space, $A\subseteq X$ and $x\in X$. Then $x\in\interior A$ iff
 	$x$ is an interior point of $A$.
 \end{proposition}
@@ -454,7 +454,7 @@ Let $(X,d)$ be a metric space.
 	the \emph{closure} of $A$.
 \end{definition}
 
-\begin{proposition}[Notes 4.26]
+\begin{proposition}[4.26]
 	Let $A,B\subseteq X$. Then
 	\begin{itemize}
 		\item $\overline\emptyset = \emptyset$ and $\overline X = X$,
@@ -471,12 +471,12 @@ Let $(X,d)$ be a metric space.
 
 \subsection{Adherent points}
 
-\begin{definition}[Notes 4.27]
+\begin{definition}[4.27]
 	Let $A\subseteq X$ and $x\in X$. We say that $x$ is an \emph{adherent point of $A$}
 	iff, for every $r>0$, we have $B(x,r)\cap A\not=\emptyset$.
 \end{definition}
 
-\begin{proposition}[Notes 4.29]
+\begin{proposition}[4.29]
 	Let $A\subseteq X$. A point $x\in X$ is an adherent point of $A$ iff
 	$x\in\overline A$.
 \end{proposition}
@@ -502,7 +502,7 @@ Let $(X,d)$ be a metric space.
 	and every $r>0$, there exists a point $y\in D$ such that $d(x,y)<r$.
 \end{definition}
 
-\begin{proposition}[Notes 4.33]
+\begin{proposition}[4.33]
 	A subset $D\subseteq X$ is dense iff it intersects every non-empty open
 	subset of $X$.
 \end{proposition}
@@ -523,27 +523,27 @@ Let $(X,d)$ be a metric space.
 	converges to zero.
 \end{definition}
 
-\begin{proposition}[Notes 5.3]
+\begin{proposition}[5.3]
 	In a metric space, $x_n\to x$ as $n\to\infty$ iff for every open ball $B$ centered at $x$, there
 	exists an index $N$, such that, for all $n\geq N$, we have $x_n\in B$.
 \end{proposition}
 
-\begin{proposition}[Notes 5.4]
+\begin{proposition}[5.4]
 	In a metric space, $x_n\to x$ as $n\to\infty$ iff, for every open set $G$ containing $x$, there
 	exists an index $N$, such that, for all indices $n$ with $n\geq N$, we have $x_n\in G$.
 \end{proposition}
 
-\begin{proposition}[Notes 5.5]
+\begin{proposition}[5.5]
 	Let $(X,d)$ be a metric space, let $(x_n)_{n\in\N}$ be a sequence in $X$ and let $x,x'\in X$.
 	If $x_n\to x$ and $x_n\to x'$ as $n\to\infty$ then $x=x'$.
 \end{proposition}
 
-\begin{proposition}[Notes 5.6]
+\begin{proposition}[5.6]
 	Let $(X,d)$ be a metric space and let $(x_n)_{n\in\N},(y_n)_{n\in\N}$ be two sequences in $X$
 	that converge to limts $x$ and $y$ respectively. Then $d(x_n,y_n)\to d(x,y)$.
 \end{proposition}
 
-\begin{corollary}[Notes 5.7]
+\begin{corollary}[5.7]
 	Let $(X,d)$ be a metric space, $(x_n)_{n\in\N}$ be a convergent sequence in $X$ with limit $x$,
 	and $y$ be any point in $X$. Then $d(x_n,y)\to d(x,y)$.
 \end{corollary}
@@ -555,7 +555,7 @@ Let $(X,d)$ be a metric space.
 	a point $c\in X$ and a positive real number $r$ such that, for all $n$, $x_n\in B(c,r)$.
 \end{definition}
 
-\begin{proposition}[Notes 5.10]
+\begin{proposition}[5.10]
 	Let $(X,d)$ be a metric space and $F\subseteq X$. The set $F$ is closed iff the limit of
 	every convergent sequence of elements of $F$ is an element of $F$.
 \end{proposition}
@@ -598,13 +598,13 @@ Let $(X,d)$ be a metric space.
 	We say $f$ is \emph{continuous} if it is continuous at every point in $X$.
 \end{definition}
 
-\begin{proposition}[Notes 6.2]
+\begin{proposition}[6.2]
 	Let $(X,d_X),(Y,d_Y)$ be metric spaces, $f:X\to Y$ be a function and $x_0\in X$. Then $f$ is continuous
 	at $x_0$ iff, for every open neighbourhood $G$ of $f(x_0)$, there exists an open neighbourhood $O$ of
 	$x_0$, such that, for all $x\in O$, we have $f(x)\in G$.
 \end{proposition}
 
-\begin{theorem}[Notes 6.5]
+\begin{theorem}[6.5]
 	Let $(X,d_X),(Y,d_Y)$ be metric spaces and $f:X\to Y$ a function. Then $f$ is continuous iff
 	the inverse image $\inv f(G)$ of any open subset $G\subset Y$ is an open subset of $X$.
 \end{theorem}
@@ -622,7 +622,7 @@ Let $(X,d)$ be a metric space.
 	\end{align*}
 \end{definition}
 
-\begin{proposition}[Notes 7.2]
+\begin{proposition}[7.2]
 	In a metric space, every convergent sequence is a Cauchy sequence.
 \end{proposition}
 
@@ -633,15 +633,15 @@ Let $(X,d)$ be a metric space.
 	$x\in X$.
 \end{definition}
 
-\begin{proposition}[Notes 7.5]
+\begin{proposition}[7.5]
 	$\R^n$ with the Euclidean metric $d_2$ is a complete metric space.
 \end{proposition}
 
-\begin{proposition}[Notes 7.6]
+\begin{proposition}[7.6]
 	$C([a,b])$ with the supremum metric (\vref{metric-cab}) is complete.
 \end{proposition}
 
-\begin{proposition}[Notes 7.7]
+\begin{proposition}[7.7]
 	Let $(X,d_X)$ and $(Y,d_Y)$ be metric spaces and let $C(X,Y)$ denote the set of all
 	bounded continuous functions from $X$ to $X$. We define $D:C(X,Y)\times C(X,Y)\to\R$
 	by
@@ -651,16 +651,16 @@ Let $(X,d)$ be a metric space.
 	Then $D$ is a metric. If $(Y,d_Y)$ is complete then $(C(X,Y),D)$ is complete.
 \end{proposition}
 
-\begin{proposition}[Notes 7.8]
+\begin{proposition}[7.8]
 	The metric space $L^2$ is complete.
 \end{proposition}
 
-\begin{proposition}[Notes 7.10]
+\begin{proposition}[7.10]
 	If $(X,d)$ is a complete metric space and $F$ is a closed subset of $X$, then
 	the subspace $(F,d_F)$ is complete.
 \end{proposition}
 
-\begin{proposition}[Notes 7.11]
+\begin{proposition}[7.11]
 	Let $(X,d)$ be a metric space and $F$ be a subset of $X$ such that the subspace $(F,d_F)$
 	is complete. Then $F$ is a closed subset of $X$.
 \end{proposition}
@@ -672,7 +672,7 @@ Let $(X,d)$ be a metric space.
 	and $r>0$ such that $X\subseteq B(c,r)$.
 \end{definition}
 
-\begin{proposition}[Notes 7.14]
+\begin{proposition}[7.14]
 	Let $(X,d)$ be a bounded metric space. For each $x\in X$ we define the function
 	$f_x:X\to\R$ by $f_x(t)=d(x,t)$.
 	\begin{enumerate}
@@ -697,7 +697,7 @@ Let $(X,d)$ be a metric space.
 	Every isometry is injective.
 \end{corollary}
 
-\begin{proposition}[Notes 7.16]
+\begin{proposition}[7.16]
 	For every metric space $(X,d)$, there exists a complete metric space that has a dense subspace
 	isometric to $X$.
 \end{proposition}
@@ -826,14 +826,77 @@ Let $(X,d)$ be a metric space.
 	$G_1,G_2$ such that $X=G_1\cup G_2$. Otherwise $X$ is connected.
 \end{definition}
 
+\begin{lemma}[10.2]
+	Let $(X,d)$ a metric space. Then the following are equivalent:
+	\begin{enumerate}
+		\item $(X,d)$ is disconnected.
+		\item There exists a clopen set $\emptyset\subset S\subset X$.
+	\end{enumerate}
+\end{lemma}
+
 \begin{proposition}[10.4]
 	Let $I\subseteq\R$ an interval. Define $d:I\times I\to\R$ by $\lra{x,y}\mapsto\abs{x-y}$.
 	Then $(I,d)$ is a connected metric space.
 \end{proposition}
 
 \begin{proposition}[10.5]
+	\label{connected_real_interval}
 	Let $\emptyset\subset Y\subseteq\R$ and let $d:Y\times Y\to\R$ the standard metric.
 	If $(Y,d)$ is a connected metric space then $Y$ is an interval.
+\end{proposition}
+
+\subsection{Intermediate value theorem}
+
+\begin{proposition}[10.6]
+	\label{connected_range}
+	Let $(X,d_X),(Y,d_Y)$ metric spaces and $f:X\to Y$ be a function. If $X$ is connected
+	and $f$ is continuous surjection then $Y$ is connected.
+\end{proposition}
+
+\begin{theorem}[Intermediate Value Theorem]
+	Let $(X,d)$ be a connected metric space and $f:X\to\R$ be a continuous function. If
+	$x_1,x_2\in X$ with $f(x_1)\neq f(x_2)$ and $y\in\R$ with $f(x_1)\leq y\leq f(x_2)$ then there exist
+	$x\in X$ such that $f(x)=y$.
+	\begin{proof}
+		$f(X)$ is a connected metric space by \ref{connected_range}.
+		$f(X)$ is an interval by \ref{connected_real_interval}.
+		Since $f(x_1)$ and $f(x_2)$ belong to the interval, so does $y$.
+	\end{proof}
+\end{theorem}
+
+\subsection{Connected components}
+
+\begin{definition}
+	Let $(X,d)$ a metric space and $Y\subseteq X$. We say that $Y$ is a \emph{disconnected
+	subset of $X$} iff there exist open sets $O_1,O_2$ such that 
+	\begin{align*}
+		Y\subseteq O_1\cup O_2,\: Y\cap O_1\cap O_2 = \emptyset,\: Y\cap O_1\neq\emptyset,
+		\:Y\cap O_2\not=\emptyset.
+	\end{align*}
+	Otherwise we say that $Y$ is a \emph{connected subset of $X$}.
+\end{definition}
+
+\begin{proposition}[10.11]
+	Let $(X,d)$ a metric space and $A,B\subseteq X$ connected with $A\cap B\neq\emptyset$.
+	Then $A\cup B$ is connected.	
+\end{proposition}
+
+\begin{lemma}
+	The intersection of two connected subsets of a metric space may not be connected.
+\end{lemma}
+
+\subsection{Path-connectedness}
+
+\begin{definition}
+	Let $(X,d)$ a metric space and $x_0,x_1\in X$. A \emph{path} in $X$ from $x_0$ to $x_1$ is a 
+	continuous function $\gamma:[0,1]\to X$ such that $\gamma(0)=x_0$, $\gamma(1)=x_1$.	
+
+	$(X,d)$ is said to be \emph{path-connected} iff for any $x_0,x_1\in X$ there exists a path 
+	from $x_0$ to $x_1$.
+\end{definition}
+
+\begin{proposition}
+	Every path-connected metric space is connected.
 \end{proposition}
 
 \end{document}
