Parallelise build script

--- a/2021_22/ITCS/cw1/coursework.tex
+++ b/2021_22/ITCS/cw1/coursework.tex
@@ -31,10 +31,10 @@
 \begin{proof}
 	We have
 	\begin{align*}
-		L_1 \cap L_2 = \Sigma^*\setminus (L_1\cup L_2) = \lneg{L_1\cup L_2}
+		L_1 \cap L_2 = \Sigma^*\setminus (L_1\cup L_2) = \overline{L_1\cup L_2}
 	\end{align*}
 	Since $L_1$ and $L_2$ are regular know that $L_1\cup L_2$ is regular.
-	Thus, by the above claim, $\lneg{L_1\cup L_2}=L_1\cap L_2$ is regular.
+	Thus, by the above claim, $\overline{L_1\cup L_2}=L_1\cap L_2$ is regular.
 \end{proof}
 
 \begin{claim}
