INT: Fix structure

--- a/2021_22/INT/notes/notes.tex
+++ b/2021_22/INT/notes/notes.tex
@@ -474,8 +474,6 @@
 	\end{align*}
 \end{lemma}
 
-\section{Gaussian integers}
-
 \begin{definition}
 	Let $\alpha(x)$ and $\gamma(x)$ be polynomials in $x$ over $R$ such that
 	\begin{align*}
@@ -488,6 +486,8 @@
 		\item $\alpha(x)\cdot\gamma(x)=\sum_{i=0}^\infty \sum_{j=0}^i a_jc_{i-j}x^i$.
 	\end{enumerate}
 \end{definition}
+
+\section{Gaussian integers}
 
 \begin{definition}
 	The \emph{Gaussian integers} are the subring $\Z[i]\subseteq\C$ given by
@@ -527,7 +527,7 @@
 \end{theorem}
 
 \begin{theorem}[Bezout Lemma]
-	Let $a,b\in\Z[i]$ with $a\not=0$ or $b\not=0$ and let $d=\gcd(a,b)$. Then there exist $s,t\in\Z$
+	Let $a,b\in\Z[i]$ with $a\not=0$ or $b\not=0$ and let $d=\gcd(a,b)$. Then there exist $s,t\in\Z[i]$
 	such that $as+bt=d$. Moreover, any common divisor of $a$ and $b$ divides $d$.
 \end{theorem}
 
@@ -561,7 +561,7 @@
 \end{theorem}
 
 \begin{lemma}[Lectures 15-16]
-	Let $p\in\Z$ be prime. Then $p=a^2+b^2$ for some $a,b\in\Z$ iff $p$ is a reducible
+	Let $p\in\Z$ be prime. Then $p=a^2+b^2$ for some $a,b\in\Z$ iff $p$ is reducible
 	as a Gaussian integer.
 \end{lemma}
 
