--- a/2021_22/AR/notes/notes.tex
+++ b/2021_22/AR/notes/notes.tex
@@ -40,7 +40,7 @@
 \end{definition}
 
 \begin{definition}
-	An \emph{interpretation} (or \emph{valuation}) $V$ is a truth assignment
+	An \emph{interpretation} $\mathcal{I}$ is a truth assignment
 	to the symbols in the alphabet $\mathcal{L}$, i.e. a function
 	\begin{align*}
 		V:\mathcal{L}\to \{\top,\bot\}.
@@ -48,7 +48,7 @@
 \end{definition}
 
 \begin{definition}
-	An interpretation $V$ \emph{satisfies} a wff $P$ if $[\![ P]\!]_V=\top$.
+	An interpretation $\mathcal{I}$ \emph{satisfies} a wff $P$ if $[\![ P]\!]_\mathcal{I}=\top$.
 \end{definition}
 
 \begin{definition}
@@ -297,6 +297,16 @@
 
 \subsection{Semantics}
 
+\begin{definition}[Interpretation]
+	An \emph{interpretation} $\mathcal{I}$ consists of a non-empty set $\mathcal{D}$ of concrete values 
+	called the \emph{domain} together with the following mappings:
+	\begin{itemize}
+		\item 0-ary predicate symbols $P\in\mathcal{P}$ are mapped to $P^\mathcal{I}\in\{\bot, \top\}$,
+		\item $n$-ary predicate symbols $P\in\mathcal{P}$ are mapped to predicates $P^\mathcal{I}\subseteq \mathcal{D}^n$, and 
+		\item $n$-ary function symbols $f\in\mathcal{F}$ are mapped to functions $f^\mathcal{I}:\mathcal{D}^n\to\mathcal{D}$.
+	\end{itemize}	
+\end{definition}
+
 \begin{definition}[Assignment]
 	Given an interpretation $\mathcal{I}$, an \emph{assignment $s$} assigns a value
 	from the domain $\mathcal{D}$ to each variable $\mathcal{V}$ i.e. $s:\mathcal{V}\to\mathcal{D}$.
@@ -312,8 +322,7 @@
 \begin{definition}[Satisfaction]
 	Given an interpretation $\mathcal{I}$ and an assignment $s:\mathcal{V}\to\mathcal{D}$
 	\begin{enumerate}
-		\item any wff which is a nullary predicate letter $A$ is satisfied iff the
-		      interpretation of $A$ in $\mathcal{I}$ is $T$,
+		\item any wff which is a nullary predicate letter $A$ is satisfied iff $A^\mathcal{I}=\top$,
 		\item suppose we have a wff $P$ of the form $A(t_1,..., t_n)$, where $A$ is
 		      interpreted as relation $A^\mathcal{I}$ and $t_1,...,t_n$ have been assigned
 		      concrete values $a_1,...,a_n$ by $s$. Then $P$ is satisfied iff \begin{align*}
@@ -328,14 +337,19 @@
 	\end{enumerate}
 \end{definition}
 
+\begin{definition}[Satisfiability, validity]
+	A wff is \emph{satisfiable} in an interpretation iff there exists an assignment that satisfies it.
+	A wff is \emph{valid} in an interpretation iff every assignment satisfies it.
+\end{definition}
+
 \begin{definition}[Entailment]
-	We write $I\vDash_s P$ to mean that wff $P$ is satisfied by interpretation $I$ and
+	We write $\mathcal{I}\vDash_s P$ to mean that wff $P$ is satisfied by interpretation $\mathcal{I}$ and
 	assignment $s$.  We say that the wffs $P_1,...,P_n$ \emph{entail} wff $Q$ and write
 	\begin{align*}
 		P_1,...,P_n\vDash Q
 	\end{align*}
-	if, for any interpretation $I$ and assignment $s$ for which $I\vDash_s P^i$ for all $i$,
-	we also have $I\vDash_s Q$.
+	if, for any interpretation $\mathcal{I}$ and assignment $s$ for which $\mathcal{I}\vDash_s P^i$ for all $i$,
+	we also have $\mathcal{I}\vDash_s Q$.
 \end{definition}
 
 \subsection{Deduction}
